<resources>
    <string name="app_name">MonAmi</string>
    <!-- Auth description -->
    <string name="tagline">Let’s count your relationship with your friends</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="prompt_email">Enter your email</string>
    <string name="prompt_password">Enter your password</string>
    <string name="loading">Loading</string>
    <string name="prompt_phone">Enter phone number</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="logout">Log Out</string>

    <string name="title_activity_location">LocationActivity</string>
    <string name="female">Female</string>
    <string name="other">Other</string>
    <string name="male">Male</string>
    <string name="avatar">Avatar</string>
    <string name="prompt_username">Enter username</string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="prompt_first_name">Enter your first name</string>
    <string name="last_name">Last Name</string>
    <string name="prompt_last_name">Enter your last name</string>
    <string name="phone_number">Phone Number</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="back">back</string>
    <string name="action_add_friend">Add Friend</string>
    <string name="gender">Gender</string>
    <string name="our_milestones">Our Milestones</string>
    <string name="new_event">New Event </string>
    <string name="prompt_event_title">Event Title</string>
    <string name="prompt_description">Event Description</string>
    <string name="event_date">Event Date</string>
    <string name="action_add_event">Add Event</string>

</resources>