<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/hellix_bold"
        android:lineSpacingExtra="8dp"
        android:text="@string/new_event"
        android:textColor="@color/primary"
        android:textSize="28sp" />

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Assignment3_RelationshipCounter.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/prompt_event_title"
        app:boxStrokeColor="@color/secondary1"
        app:boxStrokeWidth="1.5dp"
        app:cursorColor="@color/secondary1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/e_event_title"
            style="@style/Widget.Assignment3_RelationshipCounter.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        style="@style/Widget.Assignment3_RelationshipCounter.TextInputLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/prompt_description"
        app:boxStrokeColor="@color/secondary1"
        app:boxStrokeWidth="1.5dp"
        app:cursorColor="@color/secondary1">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/e_event_description"
            style="@style/Widget.Assignment3_RelationshipCounter.TextInputEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="text" />
    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/e_event_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:background="@drawable/bg_input_selector"
        android:drawablePadding="10dp"
        android:gravity="center_vertical"
        android:hint="@string/event_date"
        android:paddingHorizontal="5dp"
        android:paddingVertical="15dp"
        android:textColorHint="@color/secondary1"
        android:textSize="16sp"
        app:drawableEndCompat="@drawable/icon_calendar" />

    <Button
        android:id="@+id/action_add_event"
        style="@style/Widget.Assignment3_RelationshipCounter.Button.Primary"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:fontFamily="@font/hellix_bold"
        android:text="@string/action_add_event"
        android:textAllCaps="false"
        android:textColor="@color/white" />
</LinearLayout>
