<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:padding="16dp"
    android:background="@color/soft_pink">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal">

        <androidx.cardview.widget.CardView
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:elevation="12dp"
            android:id="@+id/view2"
            app:cardCornerRadius="100dp"
            android:layout_centerHorizontal="true"
            android:innerRadius="0dp"
            android:shape="ring"
            android:backgroundTint="@color/secondary1"
            android:thicknessRatio="1.9">
            <ImageView
                android:layout_height="150dp"
                android:layout_width="150dp"
                android:id="@+id/avatar"
                android:src="@drawable/sample"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true">
            </ImageView>
        </androidx.cardview.widget.CardView>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_username"
            app:boxStrokeWidth="1.5dp"
            android:layout_marginTop="5dp"
            app:boxStrokeColor="@color/secondary1"
            app:cursorColor="@color/secondary1"
            style="@style/Widget.Assignment3_RelationshipCounter.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/e_username"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:fontFamily="@font/hellix_bold"
                style="@style/Widget.Assignment3_RelationshipCounter.TextInputEditText" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/upgrade_to_premium_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="Upgrade to Premium"
            android:backgroundTint="@color/primary"
            android:textColor="@color/white" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/email"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/hellix_bold"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:boxStrokeWidth="1.5dp"
            android:layout_marginTop="10dp"
            android:layout_gravity="start"
            android:hint=""
            app:boxStrokeColor="@color/secondary1"
            app:cursorColor="@color/secondary1"
            style="@style/Widget.Assignment3_RelationshipCounter.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text"
                android:enabled="false"
                android:hint=""
                style="@style/Widget.Assignment3_RelationshipCounter.TextInputEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/first_name"
                    android:fontFamily="@font/hellix_bold"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="120dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_first_name"
                    app:boxStrokeWidth="1.5dp"
                    android:layout_marginTop="10dp"
                    app:boxStrokeColor="@color/secondary1"
                    app:cursorColor="@color/secondary1"
                    style="@style/Widget.Assignment3_RelationshipCounter.TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/e_first_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        style="@style/Widget.Assignment3_RelationshipCounter.TextInputEditText" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_marginTop="30dp"
                android:layout_marginStart="10dp"
                android:layout_height="wrap_content">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/last_name"
                    android:fontFamily="@font/hellix_bold"
                    />
                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="180dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_last_name"
                    app:boxStrokeWidth="1.5dp"
                    android:layout_marginTop="10dp"
                    app:boxStrokeColor="@color/secondary1"
                    app:cursorColor="@color/secondary1"
                    style="@style/Widget.Assignment3_RelationshipCounter.TextInputLayout">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/e_last_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"
                        style="@style/Widget.Assignment3_RelationshipCounter.TextInputEditText" />
                </com.google.android.material.textfield.TextInputLayout>
            </LinearLayout>
        </LinearLayout>


        <TextView
            android:id="@+id/dob"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/date_of_birth"
            android:layout_gravity="start"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/hellix_bold"
            />
        <TextView
            android:id="@+id/e_dob"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/bg_input_selector"
            android:drawablePadding="10dp"
            android:gravity="center_vertical"
            android:hint="@string/date_of_birth"
            android:paddingHorizontal="5dp"
            android:paddingVertical="15dp"
            android:textColorHint="@color/secondary1"
            android:textSize="16sp"
            app:drawableEndCompat="@drawable/icon_calendar" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone_number"
            android:layout_marginTop="20dp"
            android:layout_gravity="start"
            android:fontFamily="@font/hellix_bold"
            />
        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_phone"
            app:boxStrokeWidth="1.5dp"
            android:layout_marginTop="10dp"
            app:boxStrokeColor="@color/secondary1"
            app:cursorColor="@color/secondary1"
            style="@style/Widget.Assignment3_RelationshipCounter.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/e_phone_number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                style="@style/Widget.Assignment3_RelationshipCounter.TextInputEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/save_button"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            style="@style/Widget.Assignment3_RelationshipCounter.Button.Primary"
            android:text="@string/save"
            app:backgroundTint="@color/secondary1"
            android:textColor="@color/white" />
        <com.google.android.material.button.MaterialButton
            android:id="@+id/cancel_button"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/hard_pink"
            style="@style/Widget.Assignment3_RelationshipCounter.Button.Primary"
            android:text="@string/cancel"
            android:textColor="@color/white" />
        <Button
            android:id="@+id/action_logout"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/hellix_bold"
            android:gravity="center"
            android:text="@string/logout"
            style="@style/Widget.Assignment3_RelationshipCounter.Button.Primary" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="100dp"/>

    </LinearLayout>
</ScrollView>
