<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_pink"
    android:padding="16dp"
    tools:context=".fragments.UserProfileFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Header Section -->
        <ImageView
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_gravity="start"
            android:contentDescription="@string/back"
            android:padding="12dp"
            android:src="@drawable/ic_back" />

        <androidx.cardview.widget.CardView
            android:layout_width="300dp"
            android:layout_height="300dp"
            android:layout_gravity="center"
            app:cardCornerRadius="200dp">

            <ImageView
                android:id="@+id/avatar"
                android:layout_width="300dp"
                android:layout_height="300dp"
                android:layout_gravity="center"
                android:contentDescription="@string/avatar"
                android:scaleType="centerCrop"
                android:src="@drawable/sample" />
        </androidx.cardview.widget.CardView>

        <!-- Username -->
        <TextView
            android:id="@+id/username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="12dp"
            android:fontFamily="@font/hellix_bold"
            android:text="@string/prompt_username"
            android:textSize="22sp"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/first_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/hellix_regular"
                android:text="@string/first_name"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/last_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="5dp"
                android:fontFamily="@font/hellix_regular"
                android:text="@string/first_name"
                android:textSize="16sp" />
        </LinearLayout>

        <!-- Action Button -->
        <Button
            android:id="@+id/button_action"
            style="@style/Widget.Assignment3_RelationshipCounter.Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/primary"
            android:text="@string/action_add_friend"
            android:textColor="@android:color/white" />

        <Button
            android:id="@+id/button_delete"
            style="@style/Widget.Assignment3_RelationshipCounter.Button.Primary"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:backgroundTint="@color/secondary1"
            android:text="Delete User"
            android:textColor="@android:color/white"
            android:visibility="gone" />

        <!-- Friend Info -->
        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:background="@color/colorSecondary"
            android:backgroundTint="@color/colorTertiaryFixedDim"
            android:paddingVertical="5dp"
            app:cardCornerRadius="30dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal"
                android:paddingTop="10dp"
                android:paddingBottom="10dp">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/gender_icon"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:background="@color/secondary1"
                        android:contentDescription="@string/gender"
                        android:src="@drawable/icon_male"
                        app:shapeAppearanceOverlay="@style/CustomRoundedImage" />

                    <TextView
                        android:id="@+id/gender"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/hellix_semibold"
                        android:text="@string/gender"
                        android:textColor="@color/primary"
                        android:textSize="18sp" />
                </LinearLayout>

                <!-- Age -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/calendar_icon"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:background="@color/secondary1"
                        android:contentDescription="@string/date_of_birth"
                        android:src="@drawable/icon_calendar_white"
                        app:shapeAppearanceOverlay="@style/CustomRoundedImage" />

                    <TextView
                        android:id="@+id/dob"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/hellix_semibold"
                        android:text="@string/date_of_birth"
                        android:textColor="@color/primary"
                        android:textSize="18sp" />
                </LinearLayout>

                <!-- Total Friends -->
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <com.google.android.material.imageview.ShapeableImageView
                        android:id="@+id/friends_icon"
                        android:layout_width="60dp"
                        android:layout_height="50dp"
                        android:background="@color/secondary1"
                        android:contentDescription="@string/date_of_birth"
                        android:src="@drawable/icon_total_friends"
                        app:shapeAppearanceOverlay="@style/CustomRoundedImage" />

                    <TextView
                        android:id="@+id/total_friends"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="8dp"
                        android:fontFamily="@font/hellix_semibold"
                        android:text="@string/action_add_friend"
                        android:textColor="@color/primary"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!-- Friends Recycler View -->
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/friends_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="100dp"/>
    </LinearLayout>
</ScrollView>
