<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/fragment_login"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/soft_pink"
    android:orientation="vertical"
    tools:context=".fragments.LoginFragment"
    android:padding="16dp">

    <ImageView
        android:id="@+id/button_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="20dp"
        android:background="@color/transparent"
        android:contentDescription="@string/login"
        android:src="@drawable/icon_back" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="132dp"
        android:gravity="center"
        android:layout_above="@+id/action_login"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/hellix_bold"
            android:lineSpacingExtra="8dp"
            android:text="@string/login"
            android:textColor="@color/primary"
            android:textSize="28sp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:hint="@string/prompt_email"
            app:boxStrokeWidth="1.5dp"
            app:boxStrokeColor="@color/secondary1"
            app:cursorColor="@color/secondary1"
            style="@style/Widget.Assignment3_RelationshipCounter.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/e_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                style="@style/Widget.Assignment3_RelationshipCounter.TextInputEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/prompt_password"
            app:boxStrokeWidth="1.5dp"
            app:boxStrokeColor="@color/secondary1"
            app:cursorColor="@color/secondary1"
            style="@style/Widget.Assignment3_RelationshipCounter.TextInputLayout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/e_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                style="@style/Widget.Assignment3_RelationshipCounter.TextInputEditText" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/error_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/secondary1"
            android:layout_marginTop="10dp" />


    </LinearLayout>

    <Button
        android:id="@+id/action_login"
        android:layout_width="316dp"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="103dp"
        android:fontFamily="@font/hellix_bold"
        android:gravity="center"
        android:text="@string/login"
        style="@style/Widget.Assignment3_RelationshipCounter.Button.Primary" />


</RelativeLayout>
